add footer and update README.md file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,12 @@
 .future {
     background-color: #a8dadc;
 }
+
+.footer{
+    margin-top: 24px;
+    width: 100%;
+    padding: 36px;
+    background-color: #1d3557;
+    color: white;
+    text-align: center;
+}
